--- a/WpfApp/MainWindow.xaml
+++ b/WpfApp/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Button Content="Concatenate" Height="43" Margin="10,10,318.038,266.698" Name="BtnConcate" Width="190" Click="BtnConcate_Click"></Button>
-        <Button Content="UnblockUI" Height="43" Name="BtnUnblock" Width="190" Margin="10,58,318.038,218.698" Click="BtnUnblock_Click"></Button>
+        <Button Content="Concatenate" Margin="10,10,0,0" Name="BtnConcate" Click="BtnConcate_Click" HorizontalAlignment="Left" Width="190" Height="43" VerticalAlignment="Top"/>
+        <Button Content="UnblockUI" Name="BtnUnblock" Margin="10,58,0,0" Click="BtnUnblock_Click" HorizontalAlignment="Left" Width="190" Height="43" VerticalAlignment="Top"/>
     </Grid>
 </Window>
